--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/main/main.js",
   "scripts": {
     "start": "electron src/main/main.js",
+    "build": "npm run build --prefix src/renderer && electron-builder",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,23 @@
   },
   "homepage": "https://github.com/zfifteen/electron-grok#readme",
   "devDependencies": {
-    "electron": "^39.2.2"
+  "build": {
+    "appId": "com.electron.electron-grok",
+    "productName": "Electron-Grok",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "src/main/**/*",
+      "src/renderer/dist/**/*",
+      "python/**/*",
+      "node_modules/**/*"
+    ]
+  },
+    "electron": "^39.2.2",
+    "electron-builder": "^26.0.12"
+  },
+  "dependencies": {
+    "electron-log": "^5.4.3"
   }
 }
